cabal-version:      2.4
name:               aoc21
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Pablo Arias

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        mtl,
        split,
        multiset,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    type:       exitcode-stdio-1.0
    build-depends:
        base,
        HUnit,
        aoc21,
        containers
    main-is: Main.hs
    hs-source-dirs: test
    default-language: Haskell2010
    other-modules:
        Test.Day09

executable aoc21
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        containers,
        aoc21

    hs-source-dirs:   app
    default-language: Haskell2010
